removed DatatypeConverter (it's incompatible with Java 9). Requires Java 1.8